feat: vercel deploy restapi endpoint configure

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "env": {
-    "NEXT_PUBLIC_REST_API_ENDPOINT": "https://pickbazar-restapi-production.up.railway.app/api/",
+    "NEXT_PUBLIC_REST_API_ENDPOINT": "https://yma-server-143251812172.asia-southeast1.run.app/api/", 
     "NEXT_PUBLIC_SHOP_URL": "",
     "NEXT_PUBLIC_GOOGLE_MAP_API_KEY": "",
     "NEXT_PUBLIC_AUTH_TOKEN_KEY": "AUTH_CRED",
@@ -21,7 +21,7 @@
   },
   "build": {
     "env": {
-      "NEXT_PUBLIC_REST_API_ENDPOINT": "https://pickbazar-restapi-production.up.railway.app/api/",
+      "NEXT_PUBLIC_REST_API_ENDPOINT": "https://yma-server-143251812172.asia-southeast1.run.app/api/", 
       "NEXT_PUBLIC_SHOP_URL": "",
       "NEXT_PUBLIC_GOOGLE_MAP_API_KEY": "",
       "NEXT_PUBLIC_AUTH_TOKEN_KEY": "AUTH_CRED",
